fix(theme): search icon alignment in chrome (#373)

--- a/packages/theme-default/src/components/SearchBar.less
+++ b/packages/theme-default/src/components/SearchBar.less
@@ -89,7 +89,7 @@
       padding-right: 0;
       box-shadow: none;
       cursor: pointer;
-      background-position-x: right 7px;
+      background-position: right 8px center;
 
       + ul {
         transition: 0.1s visibility;
